--- a/localisation/english/events_l_english.yml
+++ b/localisation/english/events_l_english.yml
@@ -2200,7 +2200,7 @@
  soviet.27.t:0 "Trial of the 21"
  soviet.27_tt:0 "Increases penalty from §YOfficers Purged§!"
  soviet.27_tt2:0 "§RWill lead to a civil war in the future.§!"
- soviet.27.d:0 "After several rounds of arrests and trials, the Great Purge has weaved a narrative that led up to this trial. Among the accused are not only old leaders like Nikolai Bukharin, but a number of diplomats, politicians, military officials and even many high-ranking NKVD officers. The charges are also more extensive than previously, including decade-old plots to murder Pravda leaders and sell the Union to its enemies.\n\nThe fact that the NKVD themselves are now among the targets of the purge has in a sense brought the proceedings in full circle. Threats and beatings have led to many confessing to all charges, even the most outlandish ones. The leading defendants face execution."
+ soviet.27.d:0 "After several rounds of arrests and trials, the Great Purge has weaved a narrative that led up to this trial. Among the accused are not only old leaders like Alina, but a number of diplomats, politicians, military officials and even many high-ranking NKVD officers. The charges are also more extensive than previously, including decade-old plots to murder Pravda leaders and sell the Union to its enemies.\n\nThe fact that the NKVD themselves are now among the targets of the purge has in a sense brought the proceedings in full circle. Threats and beatings have led to many confessing to all charges, even the most outlandish ones. The leading defendants face execution."
  soviet.27.a:0 "The navy and air force have been getting off easy so far."
  soviet.27.b:0 "As we suspected, enemies are everywhere."
  soviet.27.c:0 "This has gone too far. Soon we will have killed all of our own."
