--- a/localisation/english/gup_general_l_english.yml
+++ b/localisation/english/gup_general_l_english.yml
@@ -2441,7 +2441,7 @@ KMM_anti_fascism:0 "Anti Nishizumist Propaganda"
  purged_zinoviev:1 "Purged by Katyusha"
  purged_party_members:1 "Purged by Katyusha"
  soviet.25.f:1 "There is evidence to suggest Polina was in contact with Nonna. she must go."
- soviet.25.g:1 "Bukharin has publically denounced our economic system. she is clearly unreliable."
+ soviet.25.g:1 "Alina has publically denounced our economic system. she is clearly unreliable."
  ambitious_negotiator_communism:1 "Tenacious Negotiator"
  stakhanovite_figurehead:1 "Stakhanovite Leader"
  red_bonaparte:1 "The Red Bonaparte"
