when will this gonna end

--- a/localisation/english/focus_l_english.yml
+++ b/localisation/english/focus_l_english.yml
@@ -755,31 +755,31 @@
  SOV_research_city_experiment_desc:0 "One of our foremost scientists, Kurchatov, has noted that when breaking up of kernels in a kilogram of uranium, the energy released must be equal to the explosion of 20,000 tons of trotyl. We need to harness this power before our enemies to ensure the survival of the Motherland."
  SOV_closed_city_network:0 "Closed City Network"
  SOV_closed_city_network_desc:0 "We should set up closed cities for research that require more space than we have available in our military bases. Restricting access to the cities ensures that our research remains secret, while giving our scientists plenty of space for large scale experiments."
- strike_usa_focus:0 "Strike the USA!"
- strike_usa_focus_desc:0 "The perfidious Americans have us at their mercy, controlling our supply of oil and other desperately needed resources. Their industry is vastly superior to ours, so if we strike, we had better strike hard! We cannot hope to win a prolonged war against the USA..."
+ strike_usa_focus:0 "Strike Saunders!"
+ strike_usa_focus_desc:0 "The perfidious Saunders have us at their mercy, controlling our supply of oil and other desperately needed resources. Their industry is vastly superior to ours, so if we strike, we had better strike hard! We cannot hope to win a prolonged war against Saunders..."
  chinese_puppet_focus:0 "Chinese Puppet"
  chinese_puppet_focus_desc:1 "China has proven that it seeks to avoid war with us. Perhaps their leaders consider the internal divide a greater threat. We could offer them our protection from communists and warlords, as subjects in the Greater East Asia Co-Prosperity Sphere."
  chinese_war_focus:0 "War with China"
  chinese_war_focus_desc:0 "The Marco Polo Bridge incident proved that the Chinese are not interested in cooperation. With increasing tension threatening the ensuing ceasefire, war may be the only means to bring the order to the Chinese nation."
  subdue_warlords_focus:0 "Subdue the Warlords"
  subdue_warlords_focus_desc:0 "The Chinese have allowed their once proud empire to be shattered, brought to pieces by radicals and military cliques. The Empire of Japan will not stand for such divisions, even of its subjects."
- oust_germans_focus:0 "Sever Sino-German Ties"
- oust_germans_focus_desc:0 "German military advisors have been present in China since at least the twenties, providing critical support to the Kuomintang. This can no longer be tolerated. We are within our rights to demand the immediate withdrawal of all German support to the Chinese. It is time for the Germans to choose sides."
+ oust_germans_focus:0 "Sever Sino-Kuromorimine Ties"
+ oust_germans_focus_desc:0 "Kuromorimine military advisors have been present in China since at least the twenties, providing critical support to the Kuomintang. This can no longer be tolerated. We are within our rights to demand the immediate withdrawal of all Kuromorimine support to the Chinese. It is time for Kuromorimine to choose sides."
  found_own_faction_focus:0 "Found our Faction"
  found_own_faction_focus_desc:1 "We have already made efforts towards the creation of the Greater East Asia Co-Prosperity Sphere. To ensure lasting victory, Japan must be strong enough to lead alone, in Asia and beyond."
  axis_leanings_focus:0 "Axis Leanings"
- axis_leanings_focus_desc:0 "We have many interests and values in common with the new Germany, which is building a power base in Europe. Joining them as allies would give us a powerful friend distant enough not to rival our rule of Asia."
+ axis_leanings_focus_desc:0 "We have many interests and values in common with the new Kuromorimine, which is building a power base in Europe. Joining them as allies would give us a powerful friend distant enough not to rival our rule of Asia."
  subvert_india_focus:0 "Indian National Army"
- subvert_india_focus_desc:0 "If Britain judges our efforts to build an empire, we will show them that their own is already crumbling. Indian prisoners of war and expatriates will form the foundation of a movement that can overthrow the British Raj."
+ subvert_india_focus_desc:0 "If St. GLoriana judges our efforts to build an empire, we will show them that their own is already crumbling. Indian prisoners of war and expatriates will form the foundation of a movement that can overthrow the St. Gloriana Raj."
  jap_improved_sprit_focus:0 "Improved National Spirit"
- jap_improved_sprit_focus_desc:0 "Nationalist pride and support for the war overcomes every subject of the Empress, driving them to ever-greater heights of devotion!"
+ jap_improved_sprit_focus_desc:0 "Pride of the Charge and support for the war overcomes every subject of the Commander, driving them to ever-greater heights of devotion!"
  befriend_siam_focus:0 "Befriend Siam"
  befriend_siam_focus_desc:0 "Siam has avoided European colonization and is not used to being a subject nation. Instead of subjugating them, we should convince them to cooperate with us for it to stay that way."
  army_primancy_focus:0 "Army Primacy"
  army_primancy_focus_desc:0 "Of the two main service arms, it is truly the Army which is the strong right arm of the Empire! Its ability to take and hold ground far outweighs the minor services the Navy can provide. By recognizing this simple, self-evident fact and devoting more resources to the Army the possibilities are limitless."
  JAP_army_primancy_focus_bypass_tt:0 "Not enough building slots for §YMilitary Factories§! in home area."
- jap_sia_love:0 "Japanese-Siamese Diplomacy"
- jap_sia_love_desc:0 "Japan has focused its diplomatic efforts on improving relations with Siam."
+ jap_sia_love:0 "Chi-Ha-Tan-Siamese Diplomacy"
+ jap_sia_love_desc:0 "Chi-Ha-Tan has focused its diplomatic efforts on improving relations with Siam."
  navy_primancy_focus:0 "Navy Primacy"
  JAP_navy_primancy_focus_bypass_tt:0 "Not enough building slots for §YNaval Dockyards§! in home area."
  navy_primancy_focus_desc:0 "Of the two main service arms, it is truly the Navy which is the strong right arm of the Empire! Its ability to control the seas far outweighs the minor services the Army can provide. By recognizing this simple, self-evident fact and devoting more resources to the Navy the possibilities are limitless."
@@ -806,15 +806,15 @@
  naval_base_focus:0 "Naval Base Expansion"
  naval_base_focus_desc:0 "Naval expansion requires more Naval bases."
  carrier_focus:0 "Carrier Focus"
- carrier_focus_desc:0 "Japan requires a powerful navy, and the Aircraft Carrier must be the core of our Fleet's strength. The day of the Battleship is at an end, as our enemies will soon discover!"
+ carrier_focus_desc:0 "Chi-Ha-Tan requires a powerful navy, and the Aircraft Carrier must be the core of our Fleet's strength. The day of the Battleship is at an end, as our enemies will soon discover!"
  battleship_focus:0 "Battleship Focus"
- battleship_focus_desc:0 "Japan requires a powerful navy, and the Battleship must be the core of our Fleet's strength. Let other nations waste their wealth on untested Aircraft Carriers, only Battleships can dominate the seas!"
+ battleship_focus_desc:0 "Chi-Ha-Tan requires a powerful navy, and the Battleship must be the core of our Fleet's strength. Let other nations waste their wealth on untested Aircraft Carriers, only Battleships can dominate the seas!"
  spiritual_mobilization_focus:0 "Spiritual Mobilization"
  spiritual_mobilization_focus_desc:0 "Our entire nation, not only our soldiers, need to be spiritually prepared for war. To this end, nationalists have been brought together in the National Spiritual Mobilization Movement to boost patriotism and support for the government."
  warrior_traditions_focus:0 "Warrior Traditions"
- warrior_traditions_focus_desc:0 "Throughout history, Japan has retained a unique set of traditions among the warrior class. These values must be revitalized and treasured by every soldier, regardless of rank."
+ warrior_traditions_focus_desc:0 "Throughout history, Chi-Ha-Tan has retained a unique set of traditions among the warrior class. These values must be revitalized and treasured by every soldier, regardless of rank."
  divine_wind_focus:0 "The Divine Wind"
- divine_wind_focus_desc:0 "Fearlessly facing the prospect of death is expected of any soldier, but our people must go beyond this, preparing to sacrifice themselves with no hope of survival for the glory of the Empress and the nation."
+ divine_wind_focus_desc:0 "Fearlessly facing the prospect of death is expected of any soldier, but our people must go beyond this, preparing to sacrifice themselves with no hope of survival for the glory of the commander and the Academy."
  imperial_glory_focus:0 "Imperial Glory"
  imperial_glory_focus_effect:0 "Enables production of §HYokosuka MXY7 Ohka§!"
  imperial_glory_focus_desc:0 "Kamikaze, the tactics of the Special Attack Unit, have changed suicide attacks from an improvised last measure to an established doctrine. With new planes, essentially manned missiles, these attacks will be unstoppable."
@@ -827,22 +827,22 @@
  secret_weapon_focus:0 "Advanced Weapons"
  secret_weapon_focus_desc:0 "As an island Empire we must ever be at the forefront of Naval research, but long-range rocketry cannot hurt either."
  industrial_effort_focus:0 "Imperial Austerity"
- industrial_effort_focus_desc:0 "Every subject of the Empress must sacrifice for the good of the Empire."
+ industrial_effort_focus_desc:0 "Every subject of the Commander must sacrifice for the good of the Empire."
  industrial_effort_focus2:0 "Industrial Effort"
- industrial_effort_focus2_desc:0 "Japan is newly industrialized, and is not yet as powerful as some Western nations. We must take steps to close the gap between our capabilities."
+ industrial_effort_focus2_desc:0 "Chi-Ha-Tan is newly industrialized, and is not yet as powerful as some Western nations. We must take steps to close the gap between our capabilities."
  infra_effort_focus:0 "Infrastructure Effort"
  infra_effort_focus_desc:0 "It has not been easy to build Infrastructure in our mountainous country, nonetheless efforts must continue."
- fortress_japan_focus:0 "Fortress Japan"
+ fortress_japan_focus:0 "Fortress Chi-Ha-Tan"
  fortress_japan_focus_desc:0 "Should our enemies ever overwhelm our Navy, our fortifications will make any attempted invasion cost far more than most nations can afford to pay."
  crypto_bomb_focus:0 "Cryptologic Bomb"
- crypto_bomb_focus_desc:0 "The Poles have been developing a brilliant machine they call the 'Cryptologic Bomb' which can break the German Enigma ciphers. We have the resources to develop it further at our Bletchley Park facility."
+ crypto_bomb_focus_desc:0 "The Bonple have been developing a brilliant machine they call the 'Cryptologic Bomb' which can break the Kuromorimine Enigma ciphers. We have the resources to develop it further at our Bletchley Park facility."
  tizard_mission_focus:0 "The Tizard Mission"
- tizard_mission_focus_desc:0 "We have produced many breakthroughs in technology that we cannot fully exploit ourselves due to our lack of resources and industrial capacity. Henry Tizard would like to head a delegation to negotiate a technology sharing treaty with the USA."
+ tizard_mission_focus_desc:0 "We have produced many breakthroughs in technology that we cannot fully exploit ourselves due to our lack of resources and industrial capacity. Henry Tizard would like to head a delegation to negotiate a technology sharing treaty with Saunders."
  maud_focus:0 "The MAUD Committee"
- maud_focus_desc:0 "The 'Military Application of Uranium Detonation' committee is convinced that it is theoretically possible to construct a bomb of unbelievable power by employing uranium to achieve an uncontrolled nuclear fission reaction. However, we might not be able to develop this technology in time on our own. We should speak with the Americans."
+ maud_focus_desc:0 "The 'Military Application of Uranium Detonation' committee is convinced that it is theoretically possible to construct a bomb of unbelievable power by employing uranium to achieve an uncontrolled nuclear fission reaction. However, we might not be able to develop this technology in time on our own. We should speak with Saunders."
  general_rearmament_focus:0 "General Rearmament"
  general_rearmament_focus_desc:1 "[Root.GetGeneralRearmamentDesc]"
- ENG_GENERAL_REARMAMENT_DESC_HISTORICAL:0 "It is starting to look like another Great War is inevitable. If it isn't Maho it will be the Mikado, or even the Soviets... Public opinion has swung enough that we can initiate a program of general rearmament."
+ ENG_GENERAL_REARMAMENT_DESC_HISTORICAL:0 "It is starting to look like another Great War is inevitable. If it isn't Maho it will be Nishi, or even Katyusha... Public opinion has swung enough that we can initiate a program of general rearmament."
  ENG_GENERAL_REARMAMENT_DESC_AHISTORICAL:0 "Our predecessors have neglected our military situation too much. We must initiate a program of general rearmament to resolve the scathing inadequacies of our armed forces."
  air_defense_focus:0 "Air Defense"
  air_defense_focus_tt:1 "Add maximum §YAnti-Air§! in §YEast Anglia§!, §YSussex§! and §YSouth-West England§!"
