--- a/localisation/english/gup_general_l_english.yml
+++ b/localisation/english/gup_general_l_english.yml
@@ -2834,18 +2834,18 @@
  GER_communist_revolution_desc:1 "In the midst of the Military Uprising, the Communists launched a coup d'etat against Maho, with support of Strasserist elements of the Nazi Party. Now, they seek to estabish a Free Socialist Republic of Germany."
  GER_german_workers_party:1 "Kuromorimine Workers' Party"
  GER_german_workers_party_desc:1 "We must honor the German Worker and establish a Germanic form of Socialism. Everything for the Volk! Of course, the Communists will demand there to be elections, but we can work with that."
- GER_strasserism_communism:1 "German Workers' Republic"
+ GER_strasserism_communism:1 "Kuromorimine Workers' Republic"
  GER_strasserism_communism_ADJ:1 "German"
- GER_strasserism_communism_DEF:1 "The German Workers' Republic"
- GER_strasserism_fascism:1 "German Workers' Reich"
+ GER_strasserism_communism_DEF:1 "The Kuromorimine Workers' Republic"
+ GER_strasserism_fascism:1 "Kuromorimine Workers' Reich"
  GER_strasserism_fascism_ADJ:1 "German"
- GER_strasserism_fascism_DEF:1 "The German Workers' Reich"
+ GER_strasserism_fascism_DEF:1 "The Kuromorimine Workers' Reich"
  GER_military_civil_war_tt:1 "The anti-communist military will become §Rrebellious!§!"
  GER_military_unrest:1 "Military Uprising"
  GER_socialist_civil_war_tt:1 "The military uprising has been defeated"
  GER_german_socialism:1 "Kuromorimine Socialism"
  GER_german_socialism_desc:1 "Kuromorimine Socialism must meet the unique conditions of the country. Should we exalt the German nation, or instead honour the ideals of Katyushist internationalism?"
- GER_legacy_of_marx:1 "Legacy of Marx"
+ GER_legacy_of_marx:1 "Legacy of Bellwall"
 
  RULE_COMMUNIST_GER_AI_DESC:1 "Germany will reconcile with the Soviet Union and communists will stage a coup."
  JAT_AI_BEHAVIOR:1 "Finland"
