we might be back

--- a/localisation/english/gup_general_l_english.yml
+++ b/localisation/english/gup_general_l_english.yml
@@ -2868,7 +2868,7 @@
  SDF:0 "Sozialistische Demokratische Kuromorimine"
  SDF_DEF:0 "Kuromorimine"
  SDF_ADJ:0 "Kuromorimine"   
- SDF_UNI:0 "United Kuromorimine"
+ SDF_UNI:0 "Republic of Kuromorimine"
  SDF_UNI_DEF:0 "Kuromorimine"
  SDF_UNI_ADJ:0 "Kuromorimine"   
  SDF_COUP_TAG:0 "Kuromorimine Reich"
@@ -2971,6 +2971,9 @@
  sdf_corperations:0 "Favour with the Corporations"
  sdf_rhinemetal:0 "Rheinmetall Contracts"
  sdf_messerschmitt:0 "Messerschmitt Contracts"   
+ sdf_logi_time:0 "Improved Logistics Networks"
+ sdf_rebuilding_classic:0 "The Grand Architect"
+ sdf_emergency_services:0 "Improved Emergency Services"
  ##DECISIONS##
  SDF_raise_units:0 "Raising the National Guard"
  SDF_units_52:0 "Raise Units in Munich"
@@ -3173,14 +3176,14 @@
  SDF_anzai_one_desc:0 ""
  SDF_anzai_two:0 "Dinner"
  SDF_anzai_two_desc:0 ""
- SDF_anzai_three:0 ""
- SDF_anzai_three_desc:0 ""
- SDF_anzai_four:0 ""
+ SDF_anzai_three:0 "Marshal Anchovy’s Wild Ride"
+ SDF_anzai_three_desc:0 "Anchovy is set to appear before the joint chiefs for the first time, whilst Saori is confident she is up to the task anchovy is no doubt wishes to impress them for her to ever be treated as a equal."
+ SDF_anzai_four:0 "Trucks Run on Time"
  SDF_anzai_four_desc:0 ""
- SDF_anzai_three2:0 ""
- SDF_anzai_three2_desc:0 ""
- SDF_anzai_four2:0 ""
- SDF_anzai_four2_desc:0 ""
+ SDF_anzai_three2:0 "The Grand Architect"
+ SDF_anzai_three2_desc:0 "Kuromormine for far too long has focused on military expansion it’s time to bring back much of what was lost. \nA great revival of classical architecture and refurbishing of our nations cities"
+ SDF_anzai_four2:0 "Expansion to the Emergency Services"
+ SDF_anzai_four2_desc:0 "The Feuerschutzpolizei had for a long while required a massive bolstering, its overstretched by poor funding and the prioritization of the front should the enemy continue to bomb our nation, we will be burned alive."
  SDF_anzai_five:0 ""
  SDF_anzai_five_desc:0 ""   
  ##WAR PATH##
