--- a/localisation/english/ideas_l_english.yml
+++ b/localisation/english/ideas_l_english.yml
@@ -1102,6 +1102,10 @@
  CAN_communist_ideals_2:0 "Communist Ideals"
  CAN_communist_ideals_3:0 "Communist Ideals"
  CAN_communist_ideals_4:0 "Communist Ideals"
+ CAN_canadian_citizenship: "The Canadian Citizenship Act"
+ canadian_pacific_railway: "Canadian Pacific Railway"
+ CAN_consumer_goods_for_newfoundland: "Compensation for Newfoundland"
+ CAN_dominion_rifle_association_idea: "The Dominion of Canada Rifle Association"
  AUS_eduard_freiherr:0 "Eduard Freiherr"
  AUS_alexander_lohr:0 "Alexander Löhr"
  AUS_lothar_rendulic:0 "Dr. Lothar Rendulic"
@@ -2569,6 +2573,7 @@
  USA_joseph_mccarthy:0 "Joseph McCarthy"
  USA_charles_lindbergh:0 "Charles Lindbergh"
  USA_general_motors:0 "General Motors"
+ USA_union_pacific_railway: "Union Pacific Railroad"
  detroit_arsenal:0 "Detroit Arsenal"
  tank_destroyer_board:0 "Tank Destroyer Board"
  USA_adjusted_compensation_payment:0 "Adjusted Compensation Payment"
@@ -2699,3 +2704,5 @@
  GEN_cheaper_amphib: "Improved Amphibious Designs"
  GER_german_swedish_trade_agreement: "German-Swedish Trade Agreement"
 
+ will_turn_to: "Will Turn Into"
+ upon_timeout: "Upon Timeout"
