--- a/localisation/english/wtt_decisions_l_english.yml
+++ b/localisation/english/wtt_decisions_l_english.yml
@@ -85,6 +85,7 @@ form_country_iceland_required_states_tt:0 "Controls all §YIcelandic§! states.\
  form_country_sweden_coring_states_tt:0 "Gain cores on all §YSwedish§! states.\n"
  form_country_denmark_coring_states_tt:0 "Gain cores on all §YDanish§! states.\n"
  form_country_iceland_coring_states_tt:0 "Gain cores on all §YIcelandic§! states.\n"
+ form_country_finland_coring_states_tt:0 "Gain cores on all §YFinnish§! states.\n"
  form_country_ukraine_coring_states_tt:0 "Gain cores on all §YUkrainian§! states.\n"
  form_country_belarus_coring_states_tt:0 "Gain cores on all §YBelarussian§! states.\n"
  core_black_sea_tt:0 "Gain cores around the §YBlack Sea§!.\n"
@@ -99,6 +100,8 @@ form_country_iceland_required_states_tt:0 "Controls all §YIcelandic§! states.\
  form_commonwealth:0 "Re-form the Commonwealth"
  form_united_netherlands:0 "Repudiate the Treaty of London"
  form_united_central_america:0 "Reconstitute the Federal Republic"
+ integrate_northern_gran_colombia: "Incorporate Panamá"
+ integrate_yucatan: "Incorporate the Republic of Yucatán"
  form_baltic_federation:0 "Unify the Baltics"
  form_ottoman_empire:0 "Re-form the Ottoman Empire"
  form_european_union:0 "Realize European Unity"
