https://cdn.discordapp.com/attachments/914578216818200626/1216854749060534303/image0.jpg?ex=6601e74c&is=65ef724c&hm=bf4acccd2cc2b7f12c28530dc89e2406d5279553620aa2179942ae803945636f&

--- a/localisation/english/gup_general_l_english.yml
+++ b/localisation/english/gup_general_l_english.yml
@@ -3091,11 +3091,11 @@
  SDF_send_SDK:0 "Send in the SDK"
  SDF_send_SDK_desc:0 "Despite our victory conventionally, we must now turn our gaze on the people of Kuromormine who may still hold loyalty to the old ways or even those that will oppose the great crusade we will undertake. \n \nThe Army shall deal with these individuals like all others and make the streets run red with traitors blood, just like the friekorps of old we shall follow their glorious example in purging the nation of traitors."
  SDF_democratic_fascism:0 "Implement Takebeism"
- SDF_democratic_fascism_desc:0 ""
+ SDF_democratic_fascism_desc:0 "The people have rejected Democracy, they have Rejected the Kaiser, and now they have Rejected Nishizumism. \n \nThe State of the people has been declared under the strong leadership of the Chancellor and the council and with it All knees shall bow to their enlightened leadership, and bring our democracy into a new golden age, a Thousand Year Reich"
  SDF_peoples_representation:0 "Student Representation"
  SDF_peoples_representation_desc:0 "With Kuromormine Democracy finally enacted, our great nation stands on the edge of greatness for our nations future, though to ensure our nation does not fall back into the same degeneracy of the old we must devolve some power to elected officials albeit in a limited capacity, as to allow any one state to have power over the central government would only allow the enemies of the Reich to infiltrate our great nations domestic institutions."
  SDF_sort_of_stability:0 "Some Sort of Stability"
- SDF_sort_of_stability_desc:0 ""   
+ SDF_sort_of_stability_desc:0 "At long last after lakes of blood, heaps of lead and tons of sweat and tears, we have at long last brought order to Kuromormine, whilst not all is perfect in this world of ours we are still victorious. \n \nThe Fatherland stands strong, or at least as strong as can be expected, now comes the new generation of the thousand year Reich"   
  ##OOARAI
  SDF_ooarai_issue:0 "Ooarai Debate"
  SDF_ooarai_issue_desc:0 ""
@@ -3184,8 +3184,10 @@
  SDF_anzai_three2_desc:0 "Kuromormine for far too long has focused on military expansion it’s time to bring back much of what was lost. \nA great revival of classical architecture and refurbishing of our nations cities"
  SDF_anzai_four2:0 "Expansion to the Emergency Services"
  SDF_anzai_four2_desc:0 "The Feuerschutzpolizei had for a long while required a massive bolstering, its overstretched by poor funding and the prioritization of the front should the enemy continue to bomb our nation, we will be burned alive."
- SDF_anzai_five:0 ""
- SDF_anzai_five_desc:0 ""   
+ SDF_anzai_five:0 "I Really Want to Stay at Your House"
+ SDF_anzai_five_desc:0 ""
+ SDF_anzai_six:0 "Never Fade Away"
+ SDF_anzai_six_desc:0 "" 
  ##WAR PATH##
  SDF_northwind_planning:0 "Planning Operation Northwind"
  SDF_northwind_planning_desc:0 "The Katyushaist Revolution burns with a fury that engulfs all that resist against it. Striking at its heart in Katyushaist Russia shall protect us from falling into its grasp. We must prepare at once for the invasion of Pravda."
@@ -3206,37 +3208,37 @@
  SDF_operation_northwind_desc:0 ""   
  ##POLITICAL##   
  SDF_political_manouvering:0 "Political Manouvering"
- SDF_political_manouvering_desc:0 ""
+ SDF_political_manouvering_desc:0 "Despite many attempts to consolidate power beneath numerous political parties, competing voices will undoubtedly continue to cry out for their political aims even at the detriment of the national good"
  SDF_anzai_plan:0 "Anzai Plan"
  SDF_anzai_plan_desc:0 ""
  SDF_soup_kitchen:0 "Lower Class Aid"
  SDF_soup_kitchen_desc:0 ""
  SDF_conscription:0 "Issue of Conscription"
  SDF_conscription_desc:0 ""
- SDF_economic_crisis:0 "Handeled the Economic Crisis"
- SDF_economic_crisis_desc:0 ""
+ SDF_economic_crisis_handled:0 "Handeled the Economic Crisis"
+ SDF_economic_crisis_handled_desc:0 "Through hard work and proper planning the ongoing economic crisis has finally ended despite many challenges through our nations darkest moment we have triumphed and can now push forward for a better future."
  SDF_tamed_military:0 "Tamed the Military"
- SDF_tamed_military_desc:0 ""
+ SDF_tamed_military_desc:0 "The military has been brought to heel, the efforts of our loyal soldiers in thwarting the schemes of the enemy have been accomplished at long last we have succeeded in the goal of bringing peace and security to our new empire."
  SDF_coalition_form:0 "Coalition Formed"
- SDF_coalition_form_desc:0 ""
+ SDF_coalition_form_desc:0 "Despite many attempts to get the smaller parties to endorse our government we’ve only managed to secure power through a coalition this means we will undoubtedly have to negotiate with our coalition members to prevent another political crisis from occurring"
  SDF_outright_majority:0 "Majority in the Lower Parliament"
- SDF_outright_majority_desc:0 ""
+ SDF_outright_majority_desc:0 "Thanks to the efforts of the national government we have managed to secure significant sway over the legislative, allowing us a greater degree of control over many of the upcoming laws likely to cause a stir in the nation."
  SDF_press_freedom:0 "Freedom of the Press"
- SDF_press_freedom_desc:0 ""
+ SDF_press_freedom_desc:0 "The question of freedom of press has become a hotly contested subject, whilst many wish to see a retreat from the dogmatic narrative by the former regime, others seek to strengthen the unified order and want to see the state press be the only organization able to inform the public."
  SDF_civil_freedoms:0 "Expand Upon Civil Freedoms"
- SDF_civil_freedoms_desc:0 ""
+ SDF_civil_freedoms_desc:0 "Despite the urging of many conservative members of the government we have opted to enshrine the rights of the people in our Constitution preventing the danger inherent in the government in combatting our enemies"
  SDF_secret_police:0 "Expand the K.I.B"
- SDF_secret_police_desc:0 ""
+ SDF_secret_police_desc:0 "Whilst Victoria may have been the most vocal critic of increased funding to internal security she is but a solider and she’ll fall in line if she knows what’s good for her, the state will be secured from any would be threats both internally and externally."
  SDF_war_effort:0 "War Effort"
- SDF_war_effort_desc:0 ""
+ SDF_war_effort_desc:0 "The military industrial complex can be a great asset to us should we develop it properly, and yet some see it as a a dangerous entity which shouldn’t be allowed to exist, yet it’s clear what must be done."
  SDF_volksturm:0 "B.1099 Volkssturm Act"
- SDF_volksturm_desc:0 ""
+ SDF_volksturm_desc:0 "B.1099 is a rather controversial proposal doggedly opposed by many reformers in the armed forces, it would see during times of war the total mobilization of the nation regardless of age or gender in support of the army, which if carried out to the extreme see school children raised as soldiers, we may need to take a decidedly cautious approach to this as not weighing the options would prove disasterous."
  SDF_corperations:0 "Winning over the Corperations"
- SDF_corperations_desc:0 ""
+ SDF_corperations_desc:0 "Massive firms such as Krupp, IG Farben, Rheinmetall, and Messerschmitt had previously enjoyed increadibly lucrative contracts and subsidies as part of militarization efforts of the kurmormine state. \n \nWhilst there isn’t the same level of money laying around as before we can still no doubt butter up the competition."
  SDF_rhinemetal_contracts:0 "Rhienmetall Contracts"
- SDF_rhinemetal_contracts_desc:0 ""
+ SDF_rhinemetal_contracts_desc:0 "Through several backdoor deals and lobbying by the Heer for a expansion of the nations Panzer force, the decision to award quite generous contracts to Rhinemetall and by extension Krupp, whilst they will certainly enjoy the extra pay we expect results and we shall have them if the companies wish to continue their work."
  SDF_messerschmitt_contracts:0 "Messerschmitt Contracts"
- SDF_messerschmitt_contracts_desc:0 ""   
+ SDF_messerschmitt_contracts_desc:0 "Through a very strong push by the Luftwaffle and Fallschirmjäger, and through the advice by Victoria Chief of the Fallschirmjäger, the decision to provide contracts to the Messerschmitt and IG Farben corporations have made. \n \nThe move is slightly controversial in the Heer due to the resources allocated but it’s hoped with this increased funding to aircraft production the nation will be more suited towards the eventual war against Pravda."   
  ##SDF TECH LOC##
   
  ##TANKS
